# simple-nat-traversal

./: .gitignore  Cargo.toml  README.md  TASKS.md  go.mod  go.sum  integration_test.go
.github/workflows/: ci.yml  package-release.yml  release.yml
apps/minipunch-agent/: Cargo.toml
apps/minipunch-agent/src/: main.rs
apps/minipunch-desktop/: Cargo.toml  index.html  package-lock.json  package.json  vite.config.js
apps/minipunch-desktop/src/: App.vue  autostart.rs  main.rs  tray.rs
apps/minipunch-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/minipunch-desktop/src-tauri/capabilities/: default.json
apps/minipunch-desktop/src-tauri/icons/: icon.icns
apps/minipunch-desktop/src-tauri/src/: autostart.rs  desktop.rs  main.rs  single_instance.rs
apps/minipunch-desktop/src/lib/: api.js
apps/minipunch-desktop/src/styles/: main.css
apps/minipunch-server/: Cargo.toml
apps/minipunch-server/src/: main.rs
cmd/snt/: main.go  secret_flags.go  secret_flags_test.go
cmd/snt-gui/: main.go
cmd/snt-server/: main.go
crates/minipunch-agent/: Cargo.toml
crates/minipunch-agent/src/: client.rs  config.rs  direct.rs  lib.rs  relay.rs  runtime_state.rs  status.rs
crates/minipunch-core/: Cargo.toml
crates/minipunch-core/src/: crypto.rs  lib.rs  protocol.rs  time.rs
crates/minipunch-server/: Cargo.toml
crates/minipunch-server/src/: config.rs  db.rs  error.rs  lib.rs  relay.rs  routes.rs
docs/: DEPLOYMENT.md  GUI_CLIENT.md  USER_GUIDE.md  minipunch-design.md
examples/: client-linux.json  client-macos.json  client-windows.json  server.json
internal/autostart/: autostart.go  autostart_test.go
internal/buildinfo/: buildinfo.go
internal/client/: client.go  client_control_test.go  compat.go  diagnostics.go  log_level_admin.go  network_admin.go  runtime.go  security_test.go  status.go  status_test.go  status_text.go  status_text_test.go  tcp_stream.go  tcp_stream_test.go  tcp_transport.go  tcp_transport_test.go
internal/config/: config.go  config_test.go  device_name.go  device_name_darwin.go  device_name_other.go  device_name_test.go  device_name_windows.go  patch.go  patch_test.go  wizard.go  wizard_test.go
internal/control/: log_buffer.go  overview.go  overview_test.go  runtime_manager.go  runtime_manager_test.go
internal/desktopapp/: service.go  service_test.go
internal/fyneapp/: app.go  app_test.go  i18n.go  i18n_test.go  icon.go  localized_render.go  shell.go  shell_render.go  shell_test.go  theme.go  theme_test.go
internal/fyneapp/assets/: app_icon.icns
internal/logx/: logx.go
internal/proto/: messages.go
internal/secure/: secure.go
internal/server/: log_level_admin.go  server.go  server_test.go  state.go
internal/wailsapp/: app.go
internal/wailsapp/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
internal/wailsapp/frontend/src/: backend.ts  main.ts  style.css  types.ts
scripts/: build-release.ps1  build-release.sh  check_direct_regressions.sh  generate-desktop-icons.sh  package-linux-agent.sh  package-linux-server.sh  package-linux.sh  package-macos.sh  package-windows-installer.ps1  package-windows.ps1  run-gui.ps1  run-gui.sh  smoke_auto_handoff_fallback.sh  smoke_direct_only.sh
