[workspace]
members = [
    "apps/minipunch-agent", "apps/minipunch-desktop/src-tauri",
    "apps/minipunch-server",
    "crates/minipunch-agent",
    "crates/minipunch-core",
    "crates/minipunch-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.1", features = ["macros", "ws"] }
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.39", features = ["derive"] }
dirs = "6.0.0"
eframe = "0.33.2"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
futures-util = "0.3.31"
hostname = "0.4.1"
rand = "0.8.5"
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
