[package]
name = "minipunch-agent-app"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
hostname.workspace = true
minipunch-agent = { path = "../../crates/minipunch-agent" }
minipunch-core = { path = "../../crates/minipunch-core" }
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "minipunch-agent"
path = "src/main.rs"
