[package]
name = "minipunch-desktop"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
dirs.workspace = true
eframe.workspace = true
hostname.workspace = true
minipunch-agent = { path = "../../crates/minipunch-agent" }
serde_json.workspace = true
tokio.workspace = true
tray-icon = "0.21.2"
