[package]
name = "minipunch-server-app"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
minipunch-server = { path = "../../crates/minipunch-server" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "minipunch-server"
path = "src/main.rs"
