[package]
name = "minipunch-agent"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
dirs.workspace = true
futures-util.workspace = true
hostname.workspace = true
minipunch-core = { path = "../minipunch-core" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
tracing.workspace = true
