[package]
name = "minipunch-core"
version.workspace = true
edition.workspace = true

[dependencies]
base64.workspace = true
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
x25519-dalek.workspace = true
