[package]
name = "minipunch-server"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
futures-util.workspace = true
minipunch-core = { path = "../minipunch-core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
